--- a/alcs-frontend/src/app/features/application/post-decision/edit-reconsideration-dialog/edit-reconsideration-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/post-decision/edit-reconsideration-dialog/edit-reconsideration-dialog.component.html
@@ -25,7 +25,7 @@
         </mat-select>
       </mat-form-field>
 
-      <div class="full-grid-line toggle-group">
+      <div *ngIf="!isOriginatedInPortal" class="full-grid-line toggle-group">
         <mat-label class="toggle-label">Reconsideration Type *</mat-label>
         <mat-button-toggle-group
           id="reviewOutcome"
@@ -34,6 +34,42 @@
           (change)="onTypeReconsiderationChange($event.value)"
         >
           <mat-button-toggle *ngFor="let type of codes" value="{{ type.code }}">{{ type.label }}</mat-button-toggle>
+        </mat-button-toggle-group>
+      </div>
+
+      <div *ngIf="isOriginatedInPortal" class="toggle-group">
+        <mat-label class="toggle-label">Reconsideration Type *</mat-label>
+        <mat-button-toggle-group
+          id="reviewOutcome"
+          formControlName="type"
+          name="reviewOutcome"
+          (change)="onTypeReconsiderationChange($event.value)"
+        >
+          <mat-button-toggle *ngFor="let type of codes" value="{{ type.code }}">{{ type.label }}</mat-button-toggle>
+        </mat-button-toggle-group>
+      </div>
+
+      <div *ngIf="isOriginatedInPortal">
+        <mat-label>New Evidence*</mat-label>
+        <mat-button-toggle-group required id="isNewEvidence" formControlName="isNewEvidence">
+          <mat-button-toggle value="true">Yes</mat-button-toggle>
+          <mat-button-toggle value="false">No</mat-button-toggle>
+        </mat-button-toggle-group>
+      </div>
+
+      <div *ngIf="isOriginatedInPortal">
+        <mat-label>Incorrect or False Info*</mat-label>
+        <mat-button-toggle-group required id="isIncorrectFalseInfo" formControlName="isIncorrectFalseInfo">
+          <mat-button-toggle value="true">Yes</mat-button-toggle>
+          <mat-button-toggle value="false">No</mat-button-toggle>
+        </mat-button-toggle-group>
+      </div>
+
+      <div *ngIf="isOriginatedInPortal">
+        <mat-label>New Proposal*</mat-label>
+        <mat-button-toggle-group required id="isNewProposal" formControlName="isNewProposal">
+          <mat-button-toggle value="true">Yes</mat-button-toggle>
+          <mat-button-toggle value="false">No</mat-button-toggle>
         </mat-button-toggle-group>
       </div>
 
@@ -70,6 +106,11 @@
         />
         <mat-datepicker-toggle matSuffix [for]="reviewDatePicker"></mat-datepicker-toggle>
         <mat-datepicker #reviewDatePicker type="date"> </mat-datepicker>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="full-grid-line" *ngIf="isOriginatedInPortal">
+        <mat-label>Request Description</mat-label>
+        <input matInput id="description" formControlName="description" type="text" />
       </mat-form-field>
     </div>
   </mat-dialog-content>
