remove draft decisions from list of decision on reconsideration and modification

--- a/alcs-frontend/src/app/features/application/post-decision/post-decision.component.html
+++ b/alcs-frontend/src/app/features/application/post-decision/post-decision.component.html
@@ -109,7 +109,7 @@
         #{{ reconsideration.resultingDecision.resolutionNumber }}/{{ reconsideration.resultingDecision.resolutionYear }}
       </div>
 
-      <div *ngIf="reconsideration.isOriginatedInPortal">
+      <div class="full-grid-line" *ngIf="reconsideration.isOriginatedInPortal">
         <div class="subheading2">Request Description</div>
         {{ reconsideration.description }}
       </div>
