--- a/alcs-frontend/src/app/features/application/post-decision/post-decision.component.scss
+++ b/alcs-frontend/src/app/features/application/post-decision/post-decision.component.scss
@@ -92,7 +92,7 @@ section {
   margin-top: 16px;
   margin-bottom: 32px;
   display: grid;
-  grid-template-columns: clamp(50%, 50%, 50%) clamp(50%, 50%, 50%);
+  grid-template-columns: 1fr 1fr;
   grid-row-gap: 24px;
   column-gap: 12px;
 
@@ -102,5 +102,10 @@ section {
 
   & > div {
     font-size: 16px;
+    word-wrap: break-word;
+  }
+
+  .full-grid-line {
+    grid-column: 1 / 3;
   }
 }
