Fix lfng file upload squished layout and remove unused service import

--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
@@ -106,6 +106,10 @@ a {
   }
 }
 
+.mat-icon.mat-icon-inline {
+  line-height: 100% !important;
+}
+
 @media screen and (min-width: $tabletBreakpoint) {
   .desktop-file-drag-drop {
     display: block;
