always display review outcome date

--- a/alcs-frontend/src/app/features/application/post-decision/edit-reconsideration-dialog/edit-reconsideration-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/post-decision/edit-reconsideration-dialog/edit-reconsideration-dialog.component.html
@@ -82,15 +82,7 @@
         </mat-button-toggle-group>
       </div>
 
-      <mat-form-field
-        *ngIf="
-          typeControl.value === '33' &&
-          reviewOutcomeCodeControl.value !== 'PEN' &&
-          reviewOutcomeCodeControl.value !== null
-        "
-        appearance="outline"
-        class="date-picker full-grid-line"
-      >
+      <mat-form-field *ngIf="typeControl.value === '33'" appearance="outline" class="date-picker full-grid-line">
         <mat-label>
           Outcome Notification Date
           <mat-icon matTooltip="The date that the applicant/affected party is notified of the review outcome">
