Remove document upload UI error when file is not needed

--- a/portal-frontend/src/app/features/edit-submission/proposal/subd-proposal/subd-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/subd-proposal/subd-proposal.component.html
@@ -232,7 +232,7 @@
         (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
-        [isRequired]="true"
+        [isRequired]="isHomeSiteSeverance.getRawValue() !== 'false'"
         [allowMultiple]="true"
         [disabled]="isHomeSiteSeverance.getRawValue() === 'false'"
       ></app-file-drag-drop>
