--- a/alcs-frontend/src/app/features/application/documents/document-upload-dialog/document-upload-dialog.component.scss
+++ b/alcs-frontend/src/app/features/application/documents/document-upload-dialog/document-upload-dialog.component.scss
@@ -1,3 +1,5 @@
+@use '../../../../../styles/colors';
+
 .form {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -40,4 +42,10 @@ a {
     display: flex;
     align-items: center;
   }
+}
+
+.superseded-warning {
+  background-color: colors.$secondary-color-dark;
+  color: #fff;
+  padding: 0 4px;
 }
