--- a/alcs-frontend/src/app/features/application/post-decision/post-decision.component.html
+++ b/alcs-frontend/src/app/features/application/post-decision/post-decision.component.html
@@ -40,39 +40,23 @@
         <div class="subheading2">Reconsideration Type</div>
         {{ reconsideration.type.label }}
       </div>
-      <div *ngIf="reconsideration.type.code === '33' && !reconsideration.isOriginatedInPortal">
-        <div class="subheading2">Review Outcome</div>
-        <span *ngIf="!reconsideration.reviewOutcome || reconsideration.reviewOutcome?.code === 'PEN'">
-          <app-inline-review-outcome
-            (save)="onSaveReconsiderationReviewOutcome(reconsideration.uuid, $event)"
-          ></app-inline-review-outcome>
-        </span>
-        <span *ngIf="reconsideration.reviewOutcome && reconsideration.reviewOutcome?.code !== 'PEN'">{{
-          reconsideration.reviewOutcome.label
-        }}</span>
-      </div>
 
       <div>
         <div class="subheading2">Resolutions to be Reconsidered</div>
         <ng-container> {{ reconsideration.reconsidersDecisionsNumbers.join(', ') }} </ng-container>
       </div>
 
-      <div *ngIf="!!reconsideration.resultingDecision && !reconsideration.isOriginatedInPortal">
-        <div class="subheading2">Resulting Resolution</div>
-        #{{ reconsideration.resultingDecision.resolutionNumber }}/{{ reconsideration.resultingDecision.resolutionYear }}
-      </div>
-
-      <div *ngIf="reconsideration.isOriginatedInPortal">
+      <div>
         <div class="subheading2">New Evidence</div>
         {{ reconsideration.isNewEvidence | booleanToString }}
       </div>
 
-      <div *ngIf="reconsideration.isOriginatedInPortal">
+      <div>
         <div class="subheading2">Incorrect or False Info</div>
         {{ reconsideration.isIncorrectFalseInfo | booleanToString }}
       </div>
 
-      <div *ngIf="reconsideration.isOriginatedInPortal">
+      <div>
         <div class="subheading2">New Proposal</div>
         {{ reconsideration.isNewProposal | booleanToString }}
       </div>
@@ -92,7 +76,7 @@
         </span>
       </div>
 
-      <div *ngIf="reconsideration.type.code === '33' && reconsideration.isOriginatedInPortal">
+      <div *ngIf="reconsideration.type.code === '33'">
         <div class="subheading2">Review Outcome</div>
         <span *ngIf="!reconsideration.reviewOutcome || reconsideration.reviewOutcome?.code === 'PEN'">
           <app-inline-review-outcome
@@ -104,12 +88,12 @@
         }}</span>
       </div>
 
-      <div *ngIf="!!reconsideration.resultingDecision && reconsideration.isOriginatedInPortal">
+      <div *ngIf="!!reconsideration.resultingDecision">
         <div class="subheading2">Resulting Resolution</div>
         #{{ reconsideration.resultingDecision.resolutionNumber }}/{{ reconsideration.resultingDecision.resolutionYear }}
       </div>
 
-      <div class="full-grid-line" *ngIf="reconsideration.isOriginatedInPortal">
+      <div class="full-grid-line">
         <div class="subheading2">Request Description</div>
         {{ reconsideration.description }}
       </div>
