--- a/alcs-frontend/src/app/features/application/post-decision/post-decision.component.scss
+++ b/alcs-frontend/src/app/features/application/post-decision/post-decision.component.scss
@@ -94,6 +94,7 @@ section {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-row-gap: 24px;
+  column-gap: 12px;
 
   .subheading2 {
     margin-bottom: 6px !important;
@@ -101,5 +102,10 @@ section {
 
   & > div {
     font-size: 16px;
+    word-wrap: break-word;
+  }
+
+  .full-grid-line {
+    grid-column: 1 / 3;
   }
 }
