Add Owner Dropdown for Corporate Summary
* Clean up logic in controller
* Fix warning banner preventing edit submission submit
* Load naru subtype in edit submission to enable editing of NARU

--- a/alcs-frontend/src/app/features/application/documents/document-upload-dialog/document-upload-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/documents/document-upload-dialog/document-upload-dialog.component.html
@@ -1,6 +1,8 @@
 <div mat-dialog-title>
   <h4>{{ title }} Document</h4>
-  <span class='superseded-warning' *ngIf='showCertificateOfTitleWarning'>Superseded - Not associated with Applicant Submission in Portal</span>
+  <span class="superseded-warning" *ngIf="showSupersededWarning"
+    >Superseded - Not associated with Applicant Submission in Portal</span
+  >
 </div>
 <div mat-dialog-content>
   <form class="form" [formGroup]="form">
@@ -78,6 +80,16 @@
             <span *ngIf="parcel.pid">{{ parcel.pid | mask : '000-000-000' }}</span>
             <span *ngIf="!parcel.pid">No Data</span></mat-option
           >
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div *ngIf="type.value === DOCUMENT_TYPE.CORPORATE_SUMMARY">
+      <mat-form-field class="full-width" appearance="outline">
+        <mat-label>Associated Organization</mat-label>
+        <mat-select [formControl]="ownerId">
+          <mat-option *ngFor="let owner of selectableOwners" [value]="owner.uuid">
+            {{ owner.label }}
+          </mat-option>
         </mat-select>
       </mat-form-field>
     </div>
