--- a/portal-frontend/src/app/features/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/application-details/application-details.component.html
@@ -19,7 +19,7 @@
 </section>
 <section>
   <h3>3. Primary Contact</h3>
-  <app-warning-banner *ngIf="draftMode" class="full-row error">
+  <app-warning-banner *ngIf="draftMode" class="full-row">
     Changes made to this section will not be flagged as
     <app-updated-banner></app-updated-banner> - ensure accuracy before saving.
   </app-warning-banner>
