Add Decision Condition Types to Admin

--- a/alcs-frontend/src/app/features/admin/admin.component.html
+++ b/alcs-frontend/src/app/features/admin/admin.component.html
@@ -9,8 +9,8 @@
             [routerLinkActiveOptions]="{ exact: true }"
             class="nav-item"
           >
-            <mat-icon>{{ route.icon }}</mat-icon>
-            {{ route.menuTitle }}
+            <mat-icon>{{ route.icon }}</mat-icon
+            >{{ route.menuTitle }}
           </div>
         </div>
       </div>
