Hide condition Compliance

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -5,12 +5,13 @@
     </ng-template>
     <ng-container *ngTemplateOutlet="decisionsList"></ng-container>
   </mat-tab>
-  <mat-tab>
+  <!-- TODO will be enabled in scope of another ticket -->
+  <!-- <mat-tab>
     <ng-template mat-tab-label>
       <h3>Condition Compliance</h3>
     </ng-template>
     This is conditions
-  </mat-tab>
+  </mat-tab> -->
 </mat-tab-group>
 
 <ng-template #decisionsList>
