--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -251,7 +251,7 @@
           >
             <h1 class="subheading1">Conditions</h1>
             <div>
-              <a [routerLink]="['./conditions']"
+              <a [routerLink]="['./conditions/' + decision.uuid]"
                 >View Conditions<mat-icon class="conditions-link-icon">open_in_new</mat-icon></a
               >
             </div>
